add robot benchmarking use .mjs instead of .js

--- a/index.html
+++ b/index.html
@@ -58,6 +58,6 @@
       ></button>
     </div>
 
-    <script type="module" src="main.js"></script>
+    <script type="module" src="main.mjs"></script>
   </body>
 </html>
