--- a/07_robot/index.html
+++ b/07_robot/index.html
@@ -3,59 +3,69 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Parcel Delivery Robot!</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Parcel Delivery Robot!</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
   </head>
   <body>
-    <label for="robot-select">Choose a robot:</label>
-
-    <select name="robots" id="robot-select">
-      <option value="">--Please choose an option--</option>
-      <option value="randomRobot">randomRobot</option>
-      <option value="routeRobot">routeRobot</option>
-      <option value="pathFindingRobot">pathFindingRobot</option>
-    </select>
-
-    <button id="run-robot">Run Delivery Robot</button>
-
-    <div>
-      <input
-        type="range"
-        id="speed-input"
-        name="speed-input"
-        min="0.5"
-        max="5"
-        step="0.5"
-        value="2"
-      />
-      <label for="speed-input">Speed</label>
-    </div>
-
-    <br />
-
-    <div
-      id="world"
-      style="position: relative; line-height: 0.1; margin-left: 10px"
-    >
-      <img src="img/village2x.png" style="vertical-align: -8px" />
-      <div id="robot-elt" style="position: absolute">
-        <img id="robot-img" />
+    <div class="container">
+      <h1>Parcel Delivery Robot!</h1>
+      <div>
+        <select name="robots" id="robot-select">
+          <option value="">--Choose a robot--</option>
+          <option value="randomRobot">randomRobot</option>
+          <option value="routeRobot">routeRobot</option>
+          <option value="pathFindingRobot">pathFindingRobot</option>
+        </select>
       </div>
-      <span id="status-text"></span>
-      <button
-        id="start-stop-button"
-        style="
-          color: white;
-          background: #28b;
-          border: none;
-          border-radius: 2px;
-          padding: 2px 5px;
-          line-height: 1.1;
-          font-family: sans-serif;
-          font-size: 80%;
-        "
-        hidden
-      ></button>
+      <div style="padding-top: 10px">
+        <button id="run-robot">Run Delivery Robot</button>
+      </div>
+
+      <div style="padding-top: 10px">
+        <input
+          type="range"
+          id="speed-input"
+          name="speed-input"
+          min="0.5"
+          max="5"
+          step="0.5"
+          value="2"
+        />
+        <label for="speed-input">Speed</label>
+      </div>
+
+      <br />
+
+      <div
+        id="world"
+        style="position: relative; line-height: 0.1; margin-left: 10px"
+      >
+        <img src="img/village2x.png" style="vertical-align: -8px" />
+        <div id="robot-elt" style="position: absolute">
+          <img id="robot-img" />
+        </div>
+        <span id="status-text"></span>
+        <button
+          id="start-stop-button"
+          style="
+            color: white;
+            background: #28b;
+            border: none;
+            border-radius: 2px;
+            padding: 2px 5px;
+            line-height: 1.1;
+            font-family: sans-serif;
+            font-size: 80%;
+          "
+          hidden
+        ></button>
+      </div>
     </div>
 
     <script type="module" src="main.mjs"></script>
